fix footer nav z-index
completes #10

--- a/src/scss/components/_footer-nav.scss
+++ b/src/scss/components/_footer-nav.scss
@@ -8,6 +8,7 @@
   align-content: flex-end;
   align-items: stretch;
   justify-content: space-between;
+  z-index: 3;
   margin: 0;
   box-shadow: 0 5px 10px 5px rgba($black, 0.25);
   background-color: $white;
